assets/styles/elements/octogram.features.css
body > .page > #features > .features {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  gap: var(--features-title-gap);
  margin-bottom: var(--features-bottommargin);
}

body > .page > #features > .features .title {
  color: var(--features-title);
  font-size: 3em;
  font-weight: 600;
  text-align: center;
}

body > .page > #features > .features .title .appname {
  color: var(--appnamecolor);
}

body > .page > #features > .features .list {
  display: grid;
  grid-template-rows: repeat(2, 1fr);
  grid-template-columns: repeat(4, 1fr);
  width: 100vw;
  max-width: calc(var(--features-item-image-size) * 4 + var(--features-list-gap) * 4 + 40px);
  padding: 40px;
  gap: var(--features-list-gap);
  box-sizing: border-box;
  position: relative;
}

@supports (overflow-x: overlay) {
  body > .page > #features > .features .list {  
    overflow-x: overlay;
  }
}

@media screen and (max-width: 450px) {
  body > .page > #features > .features .list {
    gap: var(--features-list-gap) 0;
  }
}

@media screen and (max-width: 700px) {
  body > .page > #features > .features .list {
    grid-template-columns: repeat(2, 1fr);
    --features-item-image-size: calc(100vw / 2.8);
  }
}

@media screen and (min-width: 700px) and (max-width: 1410px) {
  body > .page > #features > .features .list {
    grid-template-columns: repeat(3, 1fr);
    --features-item-image-size: calc(100vw / 3.8);
  }
}

body > .page > #features > .features .list .placeholder {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
  display: flex;
  align-items: center;
  justify-content: center;
}

body > .page > #features > .features .list .placeholder img {
  filter: var(--icons-transform);
  width: var(--features-item-placeholder);
  opacity: 10%;
}

body > .page > #features > .features .list .item {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  gap: var(--features-item-gap);
}

body > .page > #features > .features .list .item.extra {
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  border-radius: var(--features-item-extra-radius);
  padding-inline: var(--features-item-extra-padding);
  background: var(--features-item-extra-bg);
  box-shadow: 0 0 30px 0 #000000;
}

body > .page > #features > .features .list .item.extra .text {
  color: var(--features-item-extra-text);
}

body > .page > #features > .features .list .item.extra .button {
  clip-path: circle(calc(var(--parallax-state) * 100%));
}

body > .page > #features > .features .list .item .image {
  border-radius: calc(50% * calc(1.1 - var(--parallax-state)));
  overflow: hidden;
  box-shadow: 0 0 30px 0 #000000;
  transform: scale(max(0.6, var(--parallax-state)));
  opacity: var(--parallax-state);
}

body > .page > #features > .features .list .item .image img {
  height: var(--features-item-image-size);
  width: var(--features-item-image-size);
}

body > .page > #features > .features .list .item > .text {
  font-size: 1.5em;
  text-align: center;
  color: var(--features-item-text-color);
}

body > .page > #features > .features .list .item:not(.extra) > .text {
  transform: translateY(calc(-100% * calc(1 - var(--parallax-state))));
}

@media screen and (max-width: 1000px) {
  body > .page > #features > .features .list .item > .text {
    font-size: 0.9em;
  }
}

